--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,44 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+ul {
+  list-style-type: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-bar {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+}
+
+.header {
+  padding: 5px;
+  height: 15vh;
+  width: 100%;
+  border-bottom: 2px solid black;
+  background-color: slategray;
   color: white;
+  font-size: 30px;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bolder;
 }
 
-.App-link {
-  color: #61dafb;
+.about:hover {
+  color: lightblue
+}
+.skills:hover {
+  color: lightblue
+}
+.projects:hover {
+  color: lightblue
+}
+.contact:hover {
+  color: lightblue
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.larry-pic{
+  height: 100px;
+  width: 100px;
 }
+
