--- a/src/App.css
+++ b/src/App.css
@@ -6,48 +6,7 @@ ul {
   list-style-type: none;
 }
 
-.header {
-  padding: 5px;
-  height: 18vh;
-  width: 100%;
-  border-bottom: 2px solid black;
-  background-color: slategray;
-  color: black;
-  font-size: 20px;
-  font-family: 'Roboto Mono', monospace;
-  font-weight: bolder; 
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center; */
+li {
+  cursor: pointer;
+  user-select: none;
 }
-
-  .nav-bar {
-  display: flex;
-  justify-content: space-around;
- /* align-items: center; */
-  /* flex-direction: row; */
-} 
-
-
-.about:hover {
-  color: lightblue
-}
-.skills:hover {
-  color: lightblue
-}
-.projects:hover {
-  color: lightblue
-}
-.contact:hover {
-  color: lightblue
-}
-
-.larry-pic{
-  border: 1px solid black;
-  border-radius: 5%;
-  height: 150px;
-  width: 150px;
- 
-}
-
