--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -5,20 +5,20 @@
     border-bottom: 2px solid black;
     background-color: slategray;
     color: black;
-    font-size: 20px;
+    font-size: 30px;
     font-family: 'Roboto Mono', monospace;
     font-weight: bolder; 
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    
+    align-items: center;    
   }
 
-  .avatarContainer {
+   .avatarContainer {
     flex: 1 0 0;
     display: flex;
-    justify-content: center;
-  }
+    justify-content: space-evenly;
+    /* justify-content: center; */
+   }
 
   .larryPic{
     border: 1px solid black;
@@ -37,4 +37,14 @@
 
   .about:hover, .skills:hover, .projects:hover, .contact:hover {
     color: lightblue
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+
+  a{
+    color: black;
+    background-color: none;
   }
