--- a/src/Components/AboutMe/AboutMe.module.css
+++ b/src/Components/AboutMe/AboutMe.module.css
@@ -10,11 +10,16 @@
 }
 
 .biography {
-    padding-top: 25px;
+    /* padding-top: 25px; */
     color: black;
     font-weight: bold;
     font-size: 20px;
     text-align: left;
-    padding-left: 200px;
-    padding-right: 200px;   
+    padding: 25px 200px 0;
+}
+
+@media(max-width: 1100px) {
+    .biography {
+        padding: 0 50px 0;
+    }
 }
