--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -5,14 +5,6 @@
     font-size: 60px;
 }
 
-/* .skillsIcons{
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;    
-} */
-
 .rowOne{
     padding-top: 50px;
     width: 100%;
@@ -27,7 +19,7 @@
     justify-content: space-evenly;
 }
 
-img {
+.img {
     border-radius: 50%;
     height: 150px;
     width: 150px;    
