--- a/src/Components/Carousel/Carousel.module.css
+++ b/src/Components/Carousel/Carousel.module.css
@@ -2,3 +2,25 @@
     padding-top: 50px;
 }
 
+.projectHeaders {
+    text-align: center;
+}
+
+.projectsContainer {
+    display: flex;
+	flex-direction: column;
+    align-items: center;   
+}
+
+.projectDescription {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: left;
+    padding: 0 200px 0; 
+}
+
+@media(max-width: 1100px) {
+    .projectDescription {
+        padding: 0 100px 0;
+    }
+}
