--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -1,8 +1,8 @@
-.container {
+/* .container {
     display: flex;
 	flex-direction: column;
     align-items: center;
-}
+} */
 
 .projects {
     text-align: center;
