--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .header {
-    position: relative;
+    position: fixed;
+    z-index: 1000;
     padding: 5px;
     width: 100%;
     border-bottom: 2px solid black;
