Move skills container closer to top

--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -43,7 +43,7 @@
   } 
 
   .about:hover, .skills:hover, .projects:hover, .contact:hover {
-    color: lightblue
+    color: lightblue;
   }
 
   .h1 {
