--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -1,6 +1,5 @@
 .skills {
     text-align: center;
-    padding-top: 100px;
     font-family: 'Exo 2', sans-serif;
     font-size: 60px;
 }
@@ -23,4 +22,9 @@
     border-radius: 50%;
     height: 150px;
     width: 150px;    
+}
+
+.skillsContainer {
+    padding-top: 140px;
+    margin-top: -115px;
 }
