changed color layout

--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     border-bottom: 2px solid black;
     background-color: slategray;
+    /* background-color: #e7e7e7; */
     color: black;
     font-size: 30px;
     font-family: 'Roboto Mono', monospace;
