--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #868f96 ;
+  -moz-osx-font-smoothing: grayscale;  
+  background-color: #e7e7e7;
+
+
 }
 
 code {
