--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -21,10 +21,32 @@
 .img {
     border-radius: 50%;
     height: 150px;
-    width: 150px;    
+    width: 150px;
+    border: 3px solid whitesmoke;
+
 }
 
 .skillsContainer {
     padding-top: 140px;
     margin-top: -115px;
+}
+
+
+@media(max-width: 1100px) {
+    .img {
+        border-radius: 50%;
+        height: 125px;
+        width: 125px;
+        border: 3px solid whitesmoke;
+
+    }
+}
+
+@media(max-width: 900px) {
+    .img {
+        border-radius: 50%;
+        height: 100px;
+        width: 100px;
+        border: 3px solid whitesmoke;
+    }
 }
