--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -31,8 +31,8 @@
   .larryPic{
     border: 1px solid black;
     border-radius: 5%;
-    height: 100px;
-    width: 100px;       
+    height: 75px;
+    width: 75px;       
   }
 
   .navBar {
@@ -53,14 +53,19 @@
   }
   .h3 {
     margin-top: 0px;
-    margin-bottom: 8px;    
+    margin-bottom: 8px;   
+    font-size: 20px; 
   }
 
   a{
     color: black;
+    text-decoration: none !important;
   }
 
   .github:hover {
     color: darkviolet;
   }
-
+  
+  i {
+    font-size: 2em !important;
+  }
