--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -1,8 +1,4 @@
-.skills {
-    text-align: center;
-    font-family: 'Exo 2', sans-serif;
-    font-size: 60px;
-}
+/* 
 
 .rowOne{
     padding-top: 50px;
@@ -16,7 +12,7 @@
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-}
+} */
 
 .img {
     border-radius: 50%;
@@ -26,27 +22,8 @@
 
 }
 
-.skillsContainer {
+/* .skillsContainer {
     padding-top: 140px;
     margin-top: -115px;
-}
+} */
 
-
-@media(max-width: 1100px) {
-    .img {
-        border-radius: 50%;
-        height: 125px;
-        width: 125px;
-        border: 3px solid whitesmoke;
-
-    }
-}
-
-@media(max-width: 900px) {
-    .img {
-        border-radius: 50%;
-        height: 100px;
-        width: 100px;
-        border: 3px solid whitesmoke;
-    }
-}
