--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -14,13 +14,23 @@
     justify-content: space-evenly;
 } */
 
+.title {
+    padding-top: 95px;
+}
+
 .img {
     border-radius: 50%;
-    height: 150px;
-    width: 150px;
+    height: 125px;
+    width: 125px;
     border: 3px solid whitesmoke;
-
 }
+
+@media only screen and (max-width: 415px) {
+    .img {
+      height: 125px;
+      width: 125px;
+    }
+  }
 
 /* .skillsContainer {
     padding-top: 140px;
