added footer, modified carousel for mobile touch, changed speed of carousel

--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -1,6 +1,7 @@
-.projects {
-    text-align: center;
-    padding-top: 100px;
-    font-family: 'Exo 2', sans-serif;
-    font-size: 60px;
+.projects {   
+    padding-top: 100px;   
+}
+
+.projectDescription {
+    font-size: 20px;   
 }
